# counterfactual-clinical-xai

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  main.py  pyproject.toml
scripts/: clean_bad_parses.py  generate_figures.py  generate_tables.py  reparse_exp1.py  status_grid.py
src/: aggregator.py  data_loader.py  llm_client.py  prompts.py
src/experiments/: common.py  exp1_esi.py  exp2_ect.py  exp3_pss.py  exp4_counterfactual.py  exp5_demographic_bias.py
src/metrics/: counterfactual.py  ect.py  esi.py  pss.py  similarity.py
src/utils/: api_cache.py  config.py  logger.py  rate_limiter.py
